[gd_scene load_steps=68 format=2]

[ext_resource path="res://scr_scripts/SCR_CLASS_PLAYER.gd" type="Script" id=1]
[ext_resource path="res://spr_sprites/spr_cursor/03_clickeable_0005.png" type="Texture" id=2]
[ext_resource path="res://spr_sprites/spr_cursor/06_close_0004.png" type="Texture" id=3]
[ext_resource path="res://levels/0_UIother/scn_particles.tscn" type="PackedScene" id=4]
[ext_resource path="res://spr_sprites/spr_cursor/05_disappearwhite_0002.png" type="Texture" id=5]
[ext_resource path="res://spr_sprites/spr_cursor/02_detect_0005.png" type="Texture" id=6]
[ext_resource path="res://spr_sprites/spr_cursor/04_concentrate_0001.png" type="Texture" id=7]
[ext_resource path="res://spr_sprites/spr_cursor/05_disappearwhite_0003.png" type="Texture" id=8]
[ext_resource path="res://spr_sprites/spr_cursor/ripples_03_0008.png" type="Texture" id=10]
[ext_resource path="res://spr_sprites/spr_cursor/01_openeye_0002.png" type="Texture" id=11]
[ext_resource path="res://spr_sprites/spr_cursor/04_concentrate_0005.png" type="Texture" id=12]
[ext_resource path="res://spr_sprites/spr_cursor/ripples_03_0006.png" type="Texture" id=13]
[ext_resource path="res://spr_sprites/spr_cursor/02_detect_0001.png" type="Texture" id=14]
[ext_resource path="res://spr_sprites/spr_cursor/06_close_0001.png" type="Texture" id=15]
[ext_resource path="res://scn_experimental/scn_particle_02.tscn" type="PackedScene" id=16]
[ext_resource path="res://spr_sprites/spr_cursor/05_disappearwhite_0008.png" type="Texture" id=17]
[ext_resource path="res://spr_sprites/spr_cursor/02_detect_0002.png" type="Texture" id=18]
[ext_resource path="res://spr_sprites/spr_cursor/03_clickeable_0007.png" type="Texture" id=19]
[ext_resource path="res://spr_sprites/spr_cursor/ripples_03_0007.png" type="Texture" id=21]
[ext_resource path="res://spr_sprites/spr_cursor/ripples_03_0009.png" type="Texture" id=24]
[ext_resource path="res://spr_sprites/spr_cursor/03_clickeable_0010.png" type="Texture" id=26]
[ext_resource path="res://spr_sprites/spr_cursor/04_concentrate_0002.png" type="Texture" id=27]
[ext_resource path="res://spr_sprites/spr_cursor/03_clickeable_0009.png" type="Texture" id=28]
[ext_resource path="res://spr_sprites/spr_cursor/02_detect_0009.png" type="Texture" id=29]
[ext_resource path="res://spr_sprites/spr_cursor/05_disappearwhite_0005.png" type="Texture" id=32]
[ext_resource path="res://spr_sprites/spr_cursor/05_disappearwhite_0001.png" type="Texture" id=33]
[ext_resource path="res://spr_sprites/spr_cursor/01_openeye_0003.png" type="Texture" id=34]
[ext_resource path="res://spr_sprites/spr_cursor/02_detect_0008.png" type="Texture" id=35]
[ext_resource path="res://spr_sprites/spr_cursor/05_disappearwhite_0006.png" type="Texture" id=36]
[ext_resource path="res://spr_sprites/spr_cursor/05_disappearwhite_0004.png" type="Texture" id=37]
[ext_resource path="res://spr_sprites/spr_cursor/02_detect_0006.png" type="Texture" id=38]
[ext_resource path="res://spr_sprites/spr_cursor/04_concentrate_0003.png" type="Texture" id=39]
[ext_resource path="res://spr_sprites/spr_cursor/01_openeye_0001.png" type="Texture" id=40]
[ext_resource path="res://spr_sprites/spr_cursor/05_disappearwhite_0009.png" type="Texture" id=41]
[ext_resource path="res://spr_sprites/spr_cursor/01_openeye_0005.png" type="Texture" id=43]
[ext_resource path="res://spr_sprites/spr_cursor/03_clickeable_0004.png" type="Texture" id=44]
[ext_resource path="res://spr_sprites/spr_cursor/03_clickeable_0006.png" type="Texture" id=45]
[ext_resource path="res://spr_sprites/spr_cursor/04_concentrate_0004.png" type="Texture" id=46]
[ext_resource path="res://spr_sprites/spr_cursor/03_clickeable_0008.png" type="Texture" id=48]
[ext_resource path="res://spr_sprites/spr_cursor/04_concentrate_0007.png" type="Texture" id=52]
[ext_resource path="res://spr_sprites/spr_cursor/05_disappearwhite_0007.png" type="Texture" id=53]
[ext_resource path="res://spr_sprites/spr_cursor/02_detect_0003.png" type="Texture" id=54]
[ext_resource path="res://spr_sprites/spr_cursor/04_concentrate_0006.png" type="Texture" id=55]
[ext_resource path="res://spr_sprites/spr_cursor/04_concentrate_0009.png" type="Texture" id=56]
[ext_resource path="res://spr_sprites/spr_cursor/ripples_03_0001.png" type="Texture" id=57]
[ext_resource path="res://spr_sprites/spr_cursor/ripples_03_0002.png" type="Texture" id=58]
[ext_resource path="res://spr_sprites/spr_cursor/02_detect_0010.png" type="Texture" id=59]
[ext_resource path="res://spr_sprites/spr_cursor/06_close_0003.png" type="Texture" id=60]
[ext_resource path="res://spr_sprites/spr_cursor/ripples_03_0003.png" type="Texture" id=61]
[ext_resource path="res://spr_sprites/spr_cursor/02_detect_0004.png" type="Texture" id=62]
[ext_resource path="res://spr_sprites/spr_cursor/06_close_0002.png" type="Texture" id=63]
[ext_resource path="res://spr_sprites/spr_cursor/ripples_03_0005.png" type="Texture" id=65]
[ext_resource path="res://spr_sprites/spr_cursor/ripples_03_0004.png" type="Texture" id=66]
[ext_resource path="res://spr_sprites/spr_cursor/05_disappearwhite_0010.png" type="Texture" id=67]
[ext_resource path="res://spr_sprites/spr_cursor/04_concentrate_0008.png" type="Texture" id=68]
[ext_resource path="res://spr_sprites/spr_cursor/01_openeye_0004.png" type="Texture" id=69]
[ext_resource path="res://spr_sprites/spr_cursor/03_clickeable_0002.png" type="Texture" id=70]
[ext_resource path="res://spr_sprites/spr_cursor/02_detect_0007.png" type="Texture" id=71]
[ext_resource path="res://spr_sprites/spr_cursor/03_clickeable_0003.png" type="Texture" id=72]
[ext_resource path="res://spr_sprites/spr_cursor/empty.png" type="Texture" id=74]
[ext_resource path="res://spr_sprites/spr_cursor/03_detectcloser_0001.png" type="Texture" id=78]

[sub_resource type="CircleShape2D" id=1]
radius = 57.98

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 27 ), ExtResource( 39 ), ExtResource( 46 ), ExtResource( 12 ), ExtResource( 55 ), ExtResource( 52 ), ExtResource( 68 ), ExtResource( 56 ) ],
"loop": false,
"name": "animP_4_interact",
"speed": 10.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 37 ), ExtResource( 32 ), ExtResource( 36 ), ExtResource( 53 ), ExtResource( 17 ), ExtResource( 41 ), ExtResource( 67 ) ],
"loop": false,
"name": "animP_5_fadedot",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 27 ), ExtResource( 39 ), ExtResource( 46 ), ExtResource( 12 ), ExtResource( 55 ), ExtResource( 52 ), ExtResource( 68 ), ExtResource( 56 ), ExtResource( 74 ) ],
"loop": false,
"name": "animP_4.5_interact",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 63 ), ExtResource( 60 ), ExtResource( 3 ), ExtResource( 40 ), ExtResource( 11 ), ExtResource( 34 ), ExtResource( 69 ), ExtResource( 43 ), ExtResource( 14 ), ExtResource( 14 ) ],
"loop": false,
"name": "animP_0_blink",
"speed": 10.0
}, {
"frames": [ ExtResource( 78 ), ExtResource( 70 ), ExtResource( 72 ), ExtResource( 44 ), ExtResource( 2 ), ExtResource( 45 ), ExtResource( 19 ), ExtResource( 48 ), ExtResource( 28 ), ExtResource( 26 ) ],
"loop": false,
"name": "animP_2_detect2",
"speed": 14.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 58 ), ExtResource( 61 ), ExtResource( 66 ), ExtResource( 65 ), ExtResource( 13 ), ExtResource( 21 ), ExtResource( 10 ), ExtResource( 24 ), ExtResource( 57 ) ],
"loop": true,
"name": "animP_1_ripple3",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 27 ), ExtResource( 39 ), ExtResource( 46 ), ExtResource( 12 ), ExtResource( 55 ), ExtResource( 52 ), ExtResource( 68 ), ExtResource( 56 ), ExtResource( 33 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 37 ), ExtResource( 32 ), ExtResource( 36 ), ExtResource( 53 ), ExtResource( 17 ), ExtResource( 41 ), ExtResource( 67 ) ],
"loop": false,
"name": "animP_4_InterFade",
"speed": 0.0
}, {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 18 ), ExtResource( 54 ), ExtResource( 62 ), ExtResource( 6 ), ExtResource( 38 ), ExtResource( 71 ), ExtResource( 35 ), ExtResource( 29 ), ExtResource( 59 ) ],
"loop": false,
"name": "animP_2_detect1",
"speed": 18.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": false,
"name": "animP_3_detect2",
"speed": 10.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 11 ), ExtResource( 34 ), ExtResource( 69 ), ExtResource( 43 ) ],
"loop": false,
"name": "animP_1_open",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 63 ), ExtResource( 60 ), ExtResource( 3 ) ],
"loop": false,
"name": "animP_6_close",
"speed": 10.0
} ]

[sub_resource type="GDScript" id=3]
script/source = "extends AnimatedSprite
#
#var num_frames
#var current_frame = 0
#
## Called when the node enters the scene tree for the first time.
#func _ready():
#	set_process_input(true)
#	num_frames = get_sprite_frames().get_frame_count(\"animP_4_interact\")
#
##func _input(event):
##	if Input.is_action_pressed(\"focus\"):
##		current_frame = (current_frame + 1) % num_frames
##		set_frame(current_frame)
#
#
#func _on_Interaction_control2_animation_finished():
#	if ($\".\".animation == \"animP_4_interact\"):
#		print(\"Something useful\")
"

[sub_resource type="Animation" id=4]
resource_name = "deafult"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Interaction_control2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Interaction_control2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Interaction_control2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="scn_player_anim" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
pause_mode = 1
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="Interaction_control2" type="AnimatedSprite" parent="."]
pause_mode = 2
show_behind_parent = true
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
animation = "animP_0_blink"
offset = Vector2( -0.014, 0 )
script = SubResource( 3 )

[node name="Position2D" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="player" type="Node2D" parent="."]

[node name="particle" parent="." instance=ExtResource( 4 )]
pause_mode = 2

[node name="Particles_Focus" parent="." instance=ExtResource( 16 )]
pause_mode = 2
scale = Vector2( 3, 3 )

[node name="Timer_Unhide" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/deafult = SubResource( 4 )
anims/player_fade_in = SubResource( 5 )
anims/player_fade_out = SubResource( 6 )

[node name="Timer_PostFocus" type="Timer" parent="."]
one_shot = true
[connection signal="input_event" from="." to="." method="_on_KinematicBody2D_input_event"]
[connection signal="animation_finished" from="Interaction_control2" to="." method="_on_Interaction_control2_animation_finished"]
[connection signal="timeout" from="Timer_Unhide" to="." method="_on_Timer_Unhide_timeout"]
[connection signal="timeout" from="Timer_PostFocus" to="." method="_on_Timer_PostFocus_timeout"]
